# epic-piano-instrument

./: CMakeLists.txt  README.md  update-engine.sh  update-replace-engine.sh
resources/data/: controls.asset
src/: IVStars.cpp  IVStars.hpp  KeyData.h  PianoPlayer.cpp  PianoPlayer.export.cpp  PianoPlayer.import.cpp  PianoWorld.cpp  PianoWorld.h  main.cpp
